--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 <h2>Contact</h2>
 
 <p>The best way of getting a hold of me is by e-mail:</p>
-<p>johannes.mauritzen@ntnu.no</p>
+<p>johannes(dot)mauritzen(at)nornesec.com</p>
 
 <p>I try to reply to all emails within 24 hours / 1 working day.</p>
 </div>
 
 <div id="plan">
 
-<h2>Seminars and dates (for NTNU students only)</h2>
+<h2>Seminars and dates (for NHH students only)</h2>
 
 <ul>
   <table style="width:100%">
@@ -123,7 +123,7 @@
   <p>I encourage you to write your master thesis in English. Here is why:</p>
   <ul>
     <li>A goal should be that this master thesis introduces new knowledge to society. Writing in English allows for the thesis to reach a much larger audience.</li>
-    <li>Many NTNU master students will work for international firms where good written (business) english is important. Practice makes perfect!</li>
+    <li>Many NHH master students will work for international firms where good written (business) english is important. Practice makes perfect!</li>
     <li>The literature you will be relying on will overwhelmingly be written in English. Writing your own thesis in English will avoid problems with having to translate (and perhaps mistranslate) technical language.</li>
     <li>Writing a master thesis in English has become the standard at top business schools in Norway and Scandinavia (NHH, BI, SSE, CBS, etc)</li>
   </ul>
