--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <h2>Contact</h2>
 
 <p>The best way of getting a hold of me is by e-mail:</p>
-<p>johannes(dot)mauritzen(at)nornesec.com</p>
+<p>johannes(at)jmaurit.io</p>
 
 <p>I try to reply to all emails within 24 hours / 1 working day.</p>
 </div>
